@@ -1,0 +1,3 @@
+<script type="text/javascript">
+    history.go(-1);
+</script>
