@@ -1,0 +1,133 @@
+<?php
+
+define('THEME_INFO', 'Info');
+define('THEME_CLOSE', 'Schließen');
+
+//Nav Menu
+define('THEME_HOME', 'Home');
+define('THEME_MAINMENU', 'Hauptmenü');
+define('THEME_MENU', 'Menü');
+define('THEME_SUBMENU', 'Untermenü');
+define('THEME_MENU1', 'Über uns');
+define('THEME_MENU2', 'Module');
+define('THEME_MENU3', 'Photoalbum');
+define('THEME_MENU4', 'Kontakt');
+define('THEME_MENU5', 'News');
+define('THEME_MENU6', 'Message Board');
+define('THEME_SEARCH_TEXT', 'Suche');
+define('THEME_SEARCH_BUTTON', 'Los');
+
+define('THEME_PRIVACYPOLICY', 'Privacy Policy');
+define('THEME_TERMS', 'Bedingungen');
+
+//Account tab
+define('THEME_ACCOUNT', 'Konto');
+define('THEME_ACCOUNT_EDIT', 'Konto bearbeiten');
+define('THEME_ACCOUNT_LOGIN', 'Einloggen');
+define('THEME_ACCOUNT_LOGOUT', 'Abmelden');
+define('THEME_ACCOUNT_MESSAGES', 'Nachrichten');
+define('THEME_ACCOUNT_NOTIFICATIONS', 'Benachrichtigungen');
+define('THEME_ACCOUNT_REGISTER', 'Registrieren');
+define('THEME_ACCOUNT_TOOLBAR', 'Toolbar');
+
+//User
+define('THEME_LOGGEDINAS', 'Angemeldet als');
+define('THEME_MYPROFILE', 'Mein Profil');
+define('THEME_UPDATEPROFILE', 'Profil aktualisieren');
+define('THEME_CHANGEAVATAR', 'Avatar ändern');
+define('THEME_CHANGEPASSWORD', 'Passwort ändern');
+define('THEME_ADMINPANEL', 'Administration');
+define('THEME_WELCOME', 'Willkommen');
+define('THEME_TOTALPOST', 'Postings');
+define('THEME_TOTALMEMBERS', 'Mitglieder');
+define('THEME_LATESTMEMBER', 'Neueste Mitglieder');
+define('THEME_TOTALONLINE', 'Online');
+define('THEME_REGISTERTODAY', 'Heute registriert');
+define('THEME_REGISTERYESTERDAY', 'Gestern registriert');
+
+//Slider
+define('THEME_READMORE', 'Mehr lesen');
+
+//Home Message
+define('THEME_ABOUTUS', 'Über uns');
+define('THEME_LEARNMORE', 'Mehr erfahren ...');
+define('THEME_DASHBOARD', 'Übersicht');
+
+
+//NewBB
+define('THEME_NEWBB_TOPIC', 'Topic');
+define('THEME_FORUM_SPONSORBY', 'Sponsor By.: ');
+define('THEME_GOTOTHEFORUM', 'Gehe zum Forum');
+define('THEME_FORUM_DESCRIPTION', 'Besschreibung');
+define('THEME_NEWBB_SEARCH_FORUM', 'Suche im Forum ...');
+define('THEME_NEWBB_SEARCH_TOPIC', 'Suche im Topic ...');
+define('THEME_FORUM_DESC', 'Über dieses Forum');
+define('THEME_FORUM_NEWTOPIC', 'Neues Topic');
+define('THEME_FORUM_REGISTER', 'Registrieren');
+define('THEME_FORUM_SEARCH', 'Suche');
+define('THEME_FORUM_ADVSEARCH', 'Erweiterte Suche');
+define('THEME_FORUM_REPLY', 'Antworten');
+define('THEME_ADD_POLL', 'Abstimmung hinzufügen');
+
+//Block login
+define('THEME_USERNAME', 'Benutzername');
+define('THEME_PASSWORD', 'Passwort');
+define('THEME_EMAIL', 'Ihre E-Mail');
+define('THEME_REMEMBERME', 'Angemeldet bleiben');
+
+//Cookie consent -- escape for javascript if needed
+define('THEME_COOKIE_MESSAGE', 'Diese Webseite verwendet Cookies um die bestmögliche Nutzung zu gewährleisten');
+define('THEME_COOKIE_DISMISS', 'Verstanden!');
+define('THEME_COOKIE_LEARNMORE', 'Mehr Infos');
+
+define('THEME_SELECT_ALL', 'Alle auswählen');
+
+// Toolbar
+define('THEME_TOOLBAR_HOME', 'Home');
+define('THEME_TOOLBAR_SETTINGS', 'Einstellungen');
+define('THEME_TOOLBAR_CONTROL_PANEL', 'Control Panel');
+define('THEME_TOOLBAR_SYSTEM_CONFIG', 'System-Konfiguration');
+define('THEME_TOOLBAR_PREFERENCES', 'Präferenzen');
+define('THEME_TOOLBAR_SYSTEM_MODULE', 'System-Modul');
+define('THEME_TOOLBAR_GENERAL_SETTINGS', 'Allgemeine Einstellungen');
+define('THEME_TOOLBAR_TOOLS', 'Tools');
+define('THEME_TOOLBAR_SYSTEM_OPTIONS', 'System Optionen');
+define('THEME_TOOLBAR_DEBUGMODE', 'Debug Mode');
+define('THEME_TOOLBAR_THIS_MODULE', 'Diese Modul');
+define('THEME_TOOLBAR_MODULES', 'Module');
+define('THEME_TOOLBAR_BLOCKS', 'Blöcke');
+define('THEME_TOOLBAR_TEMPLATES', 'Templates');
+define('THEME_TOOLBAR_MAINTENANCE', 'Wartung');
+define('THEME_TOOLBAR_USER_TOOLS', 'Benutzer');
+define('THEME_TOOLBAR_USERS', 'Benutzer');
+define('THEME_TOOLBAR_GROUPS', 'Gruppen');
+define('THEME_TOOLBAR_RANKS', 'Wertungen');
+define('THEME_TOOLBAR_FIND', 'Finde');
+define('THEME_TOOLBAR_MAIL', 'Mail');
+define('THEME_TOOLBAR_COMMENTS', 'Kommentare');
+define('THEME_TOOLBAR_IMAGE_TOOLS', 'Bild');
+define('THEME_TOOLBAR_IMAGES', 'Bilder');
+define('THEME_TOOLBAR_AVATARS', 'Avatare');
+define('THEME_TOOLBAR_SMILIES', 'Smilies');
+define('THEME_TOOLBAR_BANNERS', 'Banner');
+define('THEME_TOOLBAR_CLOSE', 'Schließen');
+
+define('THEME_TOOLBAR_SHOW_BLOCK_EDIT', 'Block bearbeiten');
+define('THEME_TOOLBAR_EDIT_THIS_BLOCK', 'Diesen Block bearbeiten');
+
+define('THEME_COMMENTS', 'Kommentare');
+define('THEME_COMMENT_ADD', 'Deinen Kommentar hinzufügen');
+define('THEME_COMMENT_OPTIONS', 'Ansichtsoptionen Kommentare');
+
+define('THEME_PERMISSIONS_LEGEND', 'Berechtigungen &amp; Legende');
+
+define('THEME_INBOX_ALERT', 'Hinweis Private Nachricht');
+define('THEME_INBOX_LINK', 'Klicke zur Anzeige des Posteingangs!');
+
+define('THEME_EVENT_DOWNLOADS', 'Event Downloads');
+define('THEME_FILE_NAME', 'Datei');
+define('THEME_FILE_SIZE', 'Größe');
+
+define('THEME_CONTROL_NEXT', 'Nächste');
+define('THEME_CONTROL_PREVIOUS', 'Vorherige');
+define('THEME_SITEADMIN', 'Seiten-Admin');
